--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Udemy React</title>
+
+    <link rel="stylesheet" href="bundle.scss">
 </head>
 
 <body>
